--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.hilt_version = '2.36'
     ext {
         compose_version = '1.0.0-beta09'
     }
     repositories {
         google()
         mavenCentral()
+        maven {
+            url  "https://oss.sonatype.org/content/repositories/snapshots"
+            content {
+                includeModule("com.google.dagger", "hilt-android-gradle-plugin")
+            }
+        }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0-beta04"
+        classpath("com.android.tools.build:gradle:7.1.0-alpha01")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
-
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
