--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,8 +62,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha04"
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha09"
-
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha03"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha03'
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
